--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "globals": "^16.5.0",
     "jsdom": "^26.0.0",
     "vite": "^7.2.4",
+    "vite-plugin-pwa": "^1.2.0",
     "vitest": "^4.0.18"
   }
 }
